Fix the white spaces of header and footer

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,12 +7,16 @@
   --color-silver: #ccc;
 }
 
-html, body {
-  
+html,
+body {
+  height: 100%;
+}
 
-  * {
+
+* {
   box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
 }
 
 div { 
